2005-12-30  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xgl/xglsync.c: (xglSyncBits), (xglSyncSurface):
	Initialize the fourcc value in stack-allocated glitz_pixel_format_t
	structures.  Greatly reduces the number of uninitialized-value accesses
	during Xgl startup according to valgrind.  Allocating and filling these
	in by hand on the stack seems very shady to me.

2005-12-30  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	Fix the AC_TRY_RUN for sys/linker.h which had no hope due to lacking a
	main() to instead use a nice AC_CHECK_HEADERS that works.  Also, fix
	the nearby SYSV IPC check which was lacking an argument and giving
	bogus results (it's "AC_TRY_LINK(includes, main, yes, no)").

2005-12-29  Eric Anholt  <anholt@FreeBSD.org>

	* include/dix-config.h.in:
	Add #undef BSD44SOCKETS, without which the listener socket on FreeBSD
	would be created without the port number due to xtrans's define not
	being used when xtrans was compiled in the X Server.

2005-12-29  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/utils/kbd_mode/Makefile.am:
	Add an empty all-local target for FreeBSD make's sake, which doesn't
	deal with .PHONY.

2005-12-29  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Disable building LBX by default.

	* mi/misprite.c:
	Style fix, make SCREEN_EPILOGUE two arguments instead of three.

	* hw/kdrive/src/kinput.c:
	Make kdInputMachine static const, shrinks .data a bit.

2005-12-29  Dave Airlie  <airlied@linux.ie>

	* hw/xfree86/os-support/bus/Pci.c: (pciByteSwap):
	* hw/xfree86/os-support/bus/Pci.h:
	* hw/xfree86/os-support/bus/freebsdPci.c:
	* hw/xfree86/os-support/bus/ix86Pci.c:
	* hw/xfree86/os-support/bus/linuxPci.c:
	* hw/xfree86/os-support/bus/ppcPci.c: (ppcPciInit):
	* hw/xfree86/os-support/bus/zx1PCI.c:
	* hw/xfree86/os-support/xf86_OSlib.h:
	Remove PowerMAX_OS define it never worked , it'll never work
	again, finishes running joke of OLS2005	

2005-12-28  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xgl/Makefile.am: